# optiobj

./: .gitignore  App.pro  CMakeLists.txt  Config.pri  Demo.pro  Project.pro  UnitTests.pro  arraybuffer.hpp  camera-test.cpp  camera.cpp  camera.hpp  config.pri  controllable.hpp  inputprovider.cpp  inputprovider.hpp  main-gui.cpp  main.cpp  mesh.cpp  mesh.hpp  metatargets.txt  moc.prf  object.cpp  object.frag  object.hpp  object.vert  parser.cpp  parser.hpp  program.cpp  program.hpp  renderable.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sky.cpp  sky.frag  sky.hpp  status.cpp  status.hpp  transformation.cpp  (+8 more)
Newpson/: CMakeLists.txt  Mesh.pri  mesh.cpp
Newpson/Mesh/: Mesh.pri  mesh.cpp  mesh.h
Newpson/ObjParser/: ObjParser.pri  objparser.cpp  objparser.h  objparserinternal.h
Newpson/ObjParser/Demo/: ObjParser.pri  main.cpp
Newpson/ObjParser/RunUnitTests/: ObjParser.pri  main.cpp
Newpson/ObjParser/UnitTests/: ObjParser.pri  newpsonobjparser.h  tests.cpp
Newpson/Ui/: CMakeLists.txt  glwidget.cpp  glwidget.h  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui  viewerwindow_new.ui
Newpson/Viewer/: Viewer.pri  camera.cpp  camera.h  glwidget.cpp  glwidget.h  main.cpp  newpsonviewerglwidget.h  untitled.ui  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui
Newpson/Viewer/Camera/: Camera.pri  camera.cpp  camera.h
Newpson/Viewer/GLStorage/: GLStorage.pri  glstorage.cpp  glstorage.h
Newpson/Viewer/GLTreeWidget/: GLTreeWidget.pri  gltreewidget.cpp  gltreewidget.h
Newpson/Viewer/GLWidget/: GLWidget.pri  glwidget.cpp  glwidget.h
Newpson/ui/: viewerwindow.ui
newpson/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  main.cpp  mesh.cpp  mesh.h  mesh.hpp
newpson/test/: CMakeLists.txt  Mesh.h  main.cpp
newpson/ui/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui
program-configurator/: default.cpp  default.hpp  sky.cpp  sky.hpp
shaders/: object.frag  object.vert  sky.frag  sky.vert
util/: generate-tests_incoherence.c
